try installing QT

--- a/.github/workflows/cmakeAndQt.yml
+++ b/.github/workflows/cmakeAndQt.yml
@@ -17,9 +17,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
     - name: Get latest CMake
@@ -27,5 +25,9 @@ jobs:
           
     - name: Test version 
       run: cmake --version 
+    
+    - name: Install QT
+      run: sudo apt-get install qt5-default
+
 
 
